--- a/scissor/templates/customurl.html
+++ b/scissor/templates/customurl.html
@@ -2,15 +2,15 @@
 {% block title %}Home{% endblock %}
 {% block content %} 
 <br>
-    <h1 align="center" style="color:#0960ec">CUSTOM-SHORTEN URL</h1>
+    <h1 align="center" style="color:#ffffff">CUSTOM-SHORTEN URL</h1>
     <form method="POST">
         <br>
-            <div><h5 style="color:#0960ec">original_url:</h5>
+            <div><h5 style="color:#ffffff">original_url:</h5>
                 <input name="text" id="text" class="form-control"></input>
             </div>
         <br />
         <br>
-            <div><h5 style="color:#0960ec">custom_short_url:</h5>
+            <div><h5 style="color:#ffffff">custom_short_url:</h5>
                 <input name="text2" id="text2" class="form-control"></input>
             </div>
         <br />
