--- a/scissor/templates/home.html
+++ b/scissor/templates/home.html
@@ -35,9 +35,9 @@
     <h1 align="center" style="color:#ffffff">{% block header_custom_urls %}RECENT CUSTOM URLS{% endblock %}</h1>
     <div id="custom_urls">
         {% for url in custom_urls %}
-        <div style="background-color:rgb(159, 187, 202)" class="card border-dark">
+        <div style="background-color:rgb(248, 250, 251)" class="card border-dark">
             <br>
-            <div style="background-color:rgb(200, 233, 250)" class="card justify-content-between align-items-center border-dark">
+            <div style="background-color:rgb(72, 171, 243); color: rgb(255, 255, 255);" class="card justify-content-between align-items-center border-dark">
                 <a href="/dashboard{{url.user.email}}"></a>
                 <div><h5>Original URL: {{url.original_url}}</h5></div>
                 <br>
@@ -46,7 +46,7 @@
                 <div><h5>Click Count: {{url.click_count}}</h5></div>
                 <br>
                 <div>
-                    <button type="button" class="btn btn-primary" onclick="toggleQR('{{ url.custom_short_url }}')">QR Code</button>
+                    <button align="center" type="button" class="btn btn-warning" onclick="toggleQR('{{ url.custom_short_url }}')">QR Code</button>
                     <br>
                     <br>
                     <div id="qr_{{ url.custom_short_url }}" style="display: none;">
