--- a/scissor/templates/signup.html
+++ b/scissor/templates/signup.html
@@ -34,4 +34,7 @@
 <div align="center">
     <a href="/home"><button type="button" class="btn btn-warning">BACK</button></a>
 </div>
+<div align="right">
+    <a href="/login"><button type="button" class="btn btn-secondary">LOGIN</button></a>
+</div>
 {% endblock %}
