--- a/scissor/templates/base.html
+++ b/scissor/templates/base.html
@@ -20,9 +20,7 @@
             <h4><a class="nav-item nav-link text-white h4" href="/logout">LOGOUT</a></h4>
             <br>
             {% else %}
-            <h4><a class="nav-item nav-link text-white h4"  href="/signup">SIGN UP</a></h4>
-            <br>
-            <h4><a class="nav-item nav-link text-white h4"  href="/login">LOGIN</a></h4>
+            <h4><a class="nav-item nav-link text-warning h4"  href="/login">LOGIN</a></h4>
             {% endif %}
         </div>
       </div>
