--- a/scissor/templates/base.html
+++ b/scissor/templates/base.html
@@ -13,14 +13,14 @@
     <div class="collapse" id="navbarToggleExternalContent">
         <div class="bg-dark p-4">
             {% if current_user.is_authenticated %}
-            <h4><a class="nav-item nav-link text-white h4" href="/shortenurl">SHORTEN URL</a></h4>
+            <h4><a class="nav-item nav-link text-white h4" align="center" href="/shortenurl">SHORTEN URL</a></h4>
             <br>
-            <h4><a class="nav-item nav-link text-white h4" href="/customurl">CUSTOM URL</a></h4>
+            <h4><a class="nav-item nav-link text-white h4" align="center" href="/customurl">CUSTOM URL</a></h4>
             <br>
-            <h4><a class="nav-item nav-link text-white h4" href="/logout">LOGOUT</a></h4>
+            <h4><a class="nav-item nav-link text-warning h4" align="center" href="/logout">LOGOUT</a></h4>
             <br>
             {% else %}
-            <h4><a class="nav-item nav-link text-warning h4"  href="/login">LOGIN</a></h4>
+            <h4><a class="nav-item nav-link text-warning h4" align="center" href="/login">LOGIN</a></h4>
             {% endif %}
         </div>
       </div>
