--- a/scissor/templates/home.html
+++ b/scissor/templates/home.html
@@ -93,30 +93,23 @@
     {% endblock %} 
 {% else %}
     <br>
-        <br>
-        <br>
-        <h2 align="center" style="color:#ffffff">WELCOME TO SCISSOR</h2>
-        <br>
-        <br>
+    <br>
+    <br>
         <div align="center" class="about-text" style="color:#ffffff">
             <h1 align="center">SHORTEN. SIMPLIFY. SHARE.</h1>
             <br>
             <p>
-            <br>
-            We believe in keeping things simple, so you can focus on what matters most.
-            <br>
-            Say goodbye to clunky URLs that get lost in the crowd. Scissor simplifies your links, making them shareable with a click.
-            <br>
-            Get valuable insights into your link's performance. Scissor's built-in analytics lets you see how many are clicking.
-            <br>
-            Scissor is designed with simplicity in mind. Just paste your long URL, hit "SHORTEN", and watch the magic happen. No technical jargon or complicated setup required.
-        
+                We believe in keeping things simple, so you can focus on what matters most.
+            </p>
+            <p>
+                Scissor is designed with simplicity in mind. Just paste your long URL, hit "SHORTEN", and watch the magic happen. No technical jargon or complicated setup required.
             </p>
             <p>
                 Unlock the power of concise sharing with Scissor. Make your links impactful, trackable, and effortlessly shareable. Shorten with Scissor and experience the difference.
                 <br>
                 <br>
-                <h3>JOIN SCISSOR TODAY!</h3>
+                <br>
+                <a href="/signup"><button type="button" class="btn btn-warning btn-lg">JOIN SCISSOR NOW</button></a>                
                 <br>
             </p>
         </div>
