--- a/scissor/templates/edit.html
+++ b/scissor/templates/edit.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 {% block title %}Edit{% endblock %}
 {% block content %}
 <form action="{{url_for('views.update', url_key=url.custom_short_url)}}" method="POST" class="form-container">
