--- a/scissor/templates/home.html
+++ b/scissor/templates/home.html
@@ -16,7 +16,7 @@
                 </div>
                 <br>
                 <div>
-                    <h5>Shortened URL: <a href="http://{{ server_name }}/{{url.short_url}}" target="_blank">{{url.short_url}}</a></h5>
+                    <h5>Shortened URL: <a href="http://{{ server_name }}/{{url.short_url}}" target="_blank">https://{{ server_name }}/{{url.short_url}}</a></h5>
                 </div>
                 <div>
                     <button align="center" type="button" class="btn btn-info btn-sm" onclick="toggleQR('{{ url.short_url }}')">QR Code</button>
@@ -53,7 +53,7 @@
                 </div>
                 <br>
                 <div>
-                    <h5>Custom Shortened URL: <a href="http://{{ server_name }}/{{url.custom_short_url}}" target="_blank">{{url.custom_short_url}}</a></h5>
+                    <h5>Custom Shortened URL: <a href="http://{{ server_name }}/{{url.custom_short_url}}" target="_blank">https://{{ server_name }}/{{url.custom_short_url}}</a></h5>
                 </div>
                 <div>
                     <button align="center" type="button" class="btn btn-info btn-sm" onclick="toggleQR('{{ url.custom_short_url }}')">QR Code</button>
