--- a/scissor/templates/home.html
+++ b/scissor/templates/home.html
@@ -29,7 +29,7 @@
                 </div>
                 <div>
                     <br>
-                    <h5>Click Count: {{url.click_count}}</h5>
+                    <h5>Created: {{url.date_created.strftime('%B %d, %Y')}} || Click Count: {{url.click_count}}</h5>
                     <br>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                 </div>
                 <div>
                     <br>
-                    <h5>Click Count: {{url.click_count}}</h5>
+                    <h5>Created: {{url.date_created.strftime('%B %d, %Y')}} || Click Count: {{url.click_count}}</h5>
                     <br>
                 </div>
             </div>
