--- a/scissor/templates/base.html
+++ b/scissor/templates/base.html
@@ -42,19 +42,26 @@
             {% endfor %}
         </div>
     {% endif %}
-{% endwith %}
-<!-- alerts for success -->
-{% with success = get_flashed_messages(category_filter=["success"]) %}
-            {% if success %}
-                <div class="alert alert-success alert-dismissible fade show" role="alert" data-bs-dismiss="alert" align="center">
-                    {{ messages }}
-                    {% for message in success %}
-                        {{ message }}
-                    {% endfor %}
-                </div>
-            {% endif %}
-        {% endwith %}
-    <div class="container">{% block content %}{% endblock %}</div>
+    {% endwith %}
+    <!-- alerts for success -->
+    {% with success = get_flashed_messages(category_filter=["success"]) %}
+    {% if success %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert" data-bs-dismiss="alert" align="center">
+            {{ messages }}
+            {% for message in success %}
+                {{ message }}
+            {% endfor %}
+        </div>
+    {% endif %}
+    {% endwith %}
+    <!-- include jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- script to fade out alerts -->
+    <script type="text/javascript">
+        $(document).ready(function(){window.setTimeout(function() {$(".alert").fadeTo(500, 0).slideUp(500, function(){$(this).remove();});}, 3000);});
+    </script>
+
+<div class="container">{% block content %}{% endblock %}</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
