--- a/scissor/templates/signup.html
+++ b/scissor/templates/signup.html
@@ -12,7 +12,7 @@
         <br>
         <fieldset>
             <label for="email" style="color:#ffffff"> EMAIL:</label>
-            <input type="text" name="email" id="email" class="form-control" required>
+            <input type="email" name="email" id="email" class="form-control" required>
         </fieldset>
         <br>
         <fieldset>
