--- a/scissor/templates/login.html
+++ b/scissor/templates/login.html
@@ -3,26 +3,26 @@
 {% block content %} 
 <form method="POST">
     <br>
-    <h1 align="center" style="color:#ffffff"> HELLO THERE!</h1>
+    <h1 align="center" style="color:papayawhip"> HELLO THERE!</h1>
     <div class="form-group">
         <fieldset>
-            <label for="identifier" style="color:#ffffff">EMAIL/USERNAME:</label>
-            <input type="text" name="identifier" id="identifier" class="form-control" placeholder="Enter Email or Username" required>
+            <label for="identifier" style="color:papayawhip"><b>EMAIL/USERNAME:</b></label>
+            <input type="text" name="identifier" id="identifier" class="form-control btn-box" placeholder="Enter Email or Username" required>
         </fieldset>
         <br>
         <fieldset>
-            <label for="password" style="color:#ffffff"> PASSWORD:</label>
-            <input type="password" name="password" id="password" class="form-control" placeholder="Enter Password" required>
+            <label for="password" style="color:papayawhip"><b>PASSWORD:</b></label>
+            <input type="password" name="password" id="password" class="form-control btn-box" placeholder="Enter Password" required>
         </fieldset>
         <br>
         <fieldset align="center"> 
-            <button type="submit" id="button" class="btn btn-primary btn-lg">SUBMIT</button>
+            <button type="submit" id="button" class="btn-outline-custom">SUBMIT</button>
         </fieldset>
     </div>
 </form>
 <br>
 <div align="center">
-    <a href="/home"><button type="button" class="btn btn-warning">BACK</button></a>
+    <a href="/home"><button type="button" class="btn-outline">BACK</button></a>
 </div>
 <div align="right">
     <a href="/signup"><button type="button" class="btn btn-secondary">SIGN UP</button></a>
