--- a/scissor/templates/signup.html
+++ b/scissor/templates/signup.html
@@ -3,36 +3,36 @@
 {% block content %}
 <form method="POST">
     <br>
-    <h1 align="center" style="color:#ffffff"> SIGN UP</h1>
+    <h1 align="center" style="color:papayawhip">SIGN UP</h1>
     <div class="form-group">
         <fieldset>
-            <label for="username" style="color:#ffffff">USERNAME:</label>
-            <input type="text" name="username" id="username" class="form-control" required>
+            <label for="username" style="color:papayawhip"><b>USERNAME:</b></label>
+            <input type="text" name="username" id="username" class="form-control btn-box" required>
         </fieldset>
         <br>
         <fieldset>
-            <label for="email" style="color:#ffffff"> EMAIL:</label>
-            <input type="email" name="email" id="email" class="form-control" required>
+            <label for="email" style="color:papayawhip"><b>EMAIL:</b></label>
+            <input type="email" name="email" id="email" class="form-control btn-box" required>
         </fieldset>
         <br>
         <fieldset>
-            <label for="password1" style="color:#ffffff"> PASSWORD:</label>
-            <input type="password" name="password1" id="password1" class="form-control" required>
+            <label for="password1" style="color:papayawhip"><b>PASSWORD:</b></label>
+            <input type="password" name="password1" id="password1" class="form-control btn-box" required>
         </fieldset>
         <br>
         <fieldset>
-            <label for="password2" style="color:#ffffff"> CONFIRM PASSWORD:</label>
-            <input type="password" name="password2" id="password2" class="form-control" required>
+            <label for="password2" style="color:papayawhip"><b>CONFIRM PASSWORD:</b></label>
+            <input type="password" name="password2" id="password2" class="form-control btn-box" required>
         </fieldset>
         <br>
         <fieldset align="center"> 
-            <button type="submit" id="button" class="btn btn-primary btn-lg">SUBMIT</button>
+            <button type="submit" id="button" class="btn-outline-custom">SUBMIT</button>
         </fieldset>
     </div>
 </form>
 <br>
 <div align="center">
-    <a href="/home"><button type="button" class="btn btn-warning">BACK</button></a>
+    <a href="/home"><button type="button" class="btn-outline">BACK</button></a>
 </div>
 <div align="right">
     <a href="/login"><button type="button" class="btn btn-secondary">LOGIN</button></a>
