--- a/scissor/templates/customurl.html
+++ b/scissor/templates/customurl.html
@@ -2,26 +2,26 @@
 {% block title %}Home{% endblock %}
 {% block content %} 
 <br>
-    <h1 align="center" style="color:#ffffff">CUSTOM-SHORTEN URL</h1>
+    <h1 align="center" style="color:papayawhip">CUSTOM-SHORTEN URL</h1>
     <form method="POST">
         <br>
-            <div><h5 style="color:#ffffff">original_url:</h5>
-                <input name="text" id="text" class="form-control"></input>
+            <div><h5 style="color:papayawhip"><b>original_url:</b></h5>
+                <input name="text" id="text" class="form-control btn-box"></input>
             </div>
         <br />
         <br>
-            <div><h5 style="color:#ffffff">custom_short_url:</h5>
-                <input name="text2" id="text2" class="form-control"></input>
+            <div><h5 style="color:papayawhip"><b>custom_short_url:</b></h5>
+                <input name="text2" id="text2" class="form-control btn-box"></input>
             </div>
         <br />
         <br>
             <div align="center">
-                <button type="submit" class="btn btn-lg btn-primary">SHORTEN</button>
+                <button type="submit" class="btn-outline-custom">SHORTEN</button>
             </div>
         <br />
     </form>
 <br />
 <div align="center">
-    <a href="/home"><button type="button" class="btn btn-warning">BACK</button></a>
+    <a href="/home"><button type="button" class="btn-outline">BACK</button></a>
 </div>
 {% endblock %}
