--- a/scissor/templates/signup.html
+++ b/scissor/templates/signup.html
@@ -35,6 +35,6 @@
     <a href="/home"><button type="button" class="btn-outline">BACK</button></a>
 </div>
 <div align="right">
-    <a href="/login"><button type="button" class="btn btn-secondary">LOGIN</button></a>
+    <a href="/login"><button type="button" class="btn-qr">LOGIN</button></a>
 </div>
 {% endblock %}
