--- a/scissor/templates/login.html
+++ b/scissor/templates/login.html
@@ -25,6 +25,6 @@
     <a href="/home"><button type="button" class="btn-outline">BACK</button></a>
 </div>
 <div align="right">
-    <a href="/signup"><button type="button" class="btn btn-secondary">SIGN UP</button></a>
+    <a href="/signup"><button type="button" class="btn-qr">SIGN UP</button></a>
 </div>
 {% endblock %}
