--- a/scissor/templates/base.html
+++ b/scissor/templates/base.html
@@ -10,13 +10,14 @@
 <title>{% block title %}{% endblock %}</title>
 </head>
 <body style="background-color:rgb(128, 56, 237)">
+
     <!-- header and links to different pages -->
     <div class="collapse" id="navbarToggleExternalContent">
         <div class="bg-dark p-4">
             {% if current_user.is_authenticated %}
-            <h4><a class="nav-item nav-link h6" style="color: #4bb4ff" align="center" href="/shortenurl">SHORTEN URL</a></h4>
+            <h4><a class="nav-item nav-link h6" style="color: #4bb4ff" align="center" href="/dashboard">DASHBOARD</a></h4>
             <br>
-            <h4><a class="nav-item nav-link h6" style="color: #4bb4ff" align="center" href="/customurl">CUSTOM URL</a></h4>
+            <h4><a class="nav-item nav-link h6" style="color: #4bb4ff" align="center" href="/home">HOME</a></h4>
             <br>
             <h4><a class="nav-item nav-link h6" style="color: rgba(255, 85, 85, 0.971);" align="center" href="/logout">LOGOUT</a></h4>
             <br>
@@ -33,28 +34,16 @@
             </button>
         </div>
       </nav>
-    <!-- alerts for errors -->
-    {% with errors = get_flashed_messages(category_filter=["error"]) %}
-    {% if errors %}
-        <div id="failure" class="alert alert-danger alert-dismissible fade show" role="alert" data-bs-dismiss="alert" align="center">
-            {{ messages }}
-            {% for message in errors %}
-                {{ message }}
-            {% endfor %}
+
+    <!-- Modal for notifications -->
+    <div class="modal fade small-modal" id="notificationModal" tabindex="-1" aria-labelledby="notificationModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <p class="modal-content modal-body" id="notificationModalBody">
+            <!-- Notification content will be injected here -->
+            </p>
         </div>
-    {% endif %}
-    {% endwith %}
-    <!-- alerts for success -->
-    {% with success = get_flashed_messages(category_filter=["success"]) %}
-    {% if success %}
-        <div class="alert alert-success alert-dismissible fade show" role="alert" data-bs-dismiss="alert" align="center">
-            {{ messages }}
-            {% for message in success %}
-                {{ message }}
-            {% endfor %}
-        </div>
-    {% endif %}
-    {% endwith %}
+    </div>
+
     <div class="container">{% block content %}{% endblock %}</div>
     <div id="emoji1" style="position: fixed; pointer-events: none;">✂️</div>
     <div id="emoji2" style="position: fixed; pointer-events: none;">✂️</div>
@@ -63,31 +52,62 @@
     <div id="emoji5" style="position: fixed; pointer-events: none;">✂️</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script>
-        var emojis = [
-            document.getElementById('emoji1'),
-            document.getElementById('emoji2'),
-            document.getElementById('emoji3'),
-            document.getElementById('emoji4'),
-            document.getElementById('emoji5')
-        ];
-        var angles = [0, 72, 144, 216, 288];  // Angles for the 5 scissors (360 degrees / 5)
-        var radius = 50;  // Distance from the cursor
-
-        document.onmousemove = function(e) {
-            for (var i = 0; i < emojis.length; i++) {
-                var radian = angles[i] * (Math.PI / 180);  // Convert to radians
-                emojis[i].style.left = (e.pageX + radius * Math.cos(radian)) + 'px';
-                emojis[i].style.top = (e.pageY + radius * Math.sin(radian)) + 'px';
-                angles[i] = (angles[i] + 1) % 360;  // Increase angle and wrap at 360
-            }
-        };
+      // Check if device is mobile
+      if (!window.matchMedia("only screen and (max-width: 760px)").matches) {
+          var emojis = [
+              document.getElementById('emoji1'),
+              document.getElementById('emoji2'),
+              document.getElementById('emoji3'),
+              document.getElementById('emoji4'),
+              document.getElementById('emoji5')
+          ];
+          var angles = [0, 72, 144, 216, 288];  // Angles for the 5 scissors (360 degrees / 5)
+          var radius = 50;  // Distance from the cursor
+          var mouse = {x: window.innerWidth / 2, y: window.innerHeight / 2};  // To store the current mouse position
+  
+          // Update the mouse position whenever it moves
+          document.onmousemove = function(e) {
+              mouse.x = e.pageX;
+              mouse.y = e.pageY;
+          };
+  
+          // Update the position of the emojis every 20 milliseconds
+          setInterval(function() {
+              for (var i = 0; i < emojis.length; i++) {
+                  var radian = angles[i] * (Math.PI / 180);  // Convert to radians
+                  emojis[i].style.left = (mouse.x + radius * Math.cos(radian)) + 'px';
+                  emojis[i].style.top = (mouse.y + radius * Math.sin(radian)) + 'px';
+                  angles[i] = (angles[i] + 2) % 360;  // Increase angle and wrap at 360
+              }
+          }, 20);
+      }
     </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-<!-- include jQuery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<!-- script to fade out alerts -->
-<script type="text/javascript">
-    $(document).ready(function(){window.setTimeout(function() {$(".alert").fadeTo(500, 0).slideUp(500, function(){$(this).remove();});}, 3000);});
-</script>
+
+    {% if message and message != 'None' %}
+   <!-- jQuery included above other JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script>
+        $(document).ready(function() {
+          var message = "{{ message }}";
+          var messageType = "{{ message_type }}";
+          if (message !== '') {
+            var modalBody = document.getElementById('notificationModalBody');
+            // Change modal content and style based on message type
+            if (messageType === 'success') {
+              modalBody.innerHTML = "<p class='text-success'>" + message + "</p>";
+            } else if (messageType === 'error') {
+              modalBody.innerHTML = "<p class='text-danger'>" + message + "</p>";
+            }
+            // Show the modal
+            $('#notificationModal').modal('show');
+            // Hide the modal after 3 seconds
+            setTimeout(function() {
+              $('#notificationModal').modal('hide');
+            }, 1000);
+          }
+        });
+    </script>
+    {% endif %}
+
 </body>
 </html>
