--- a/scissor/templates/dashboard.html
+++ b/scissor/templates/dashboard.html
@@ -1,8 +1,80 @@
-{% extends "home.html" %} {% block title %}{{email}}'s URLS{% endblock
-    %} {% block header %} {{email}}'S URLS {% endblock %} {% block footer %}
-    <div align="center">
-      <a href="/home"
-        ><button type="button" class="btn btn-primary btn-lg">BACK</button></a
-      >
+{% extends "home.html" %} 
+{% block title %}Dashboard{% endblock %} 
+{% block content%}
+    <br>
+    <h1 align="center" style="color:papayawhip">{% block header %}RECENT SHORT URLS{% endblock %}</h1>
+    <div id="urls">
+        {% for url in urls %}
+        <div class="transparent-box">
+            <div align="center" style="color: papayawhip;">
+                <a href="/dashboard{{url.user.email}}"></a>
+                <p><h5>Original URL: <a class="my-link" href="{{url.original_url}}" target="_blank">{{url.original_url}}</a></h5></p>
+                <p><h5>Shortened URL: <a class="my-link" href="http://{{ server_name }}/{{url.short_url}}" target="_blank">https://{{ server_name }}/{{url.short_url}}</a></h5></p>
+                <div>
+                    <button align="center" type="button" class="btn-qr" onclick="toggleQR('{{ url.short_url }}')">QR Code</button>
+                    <a href="{{ url_for('views.delete', url_key=url.short_url) }}"><button type="button" class="btn-delete">Delete</button></a>
+                </div>
+                <div id="qr_{{ url.short_url }}" style="display: none;">
+                    <br><p><img src="" alt="QR Code"></p>
+                </div>
+                    <p><h6>Created: {{url.date_created.strftime('%B %d, %Y')}} || Click Count: {{url.click_count}}</h6></p>
+            </div>
+        </div>
+        {% endfor %}
+    <br>
+    <h1 align="center" style="color:papayawhip">{% block header_custom_urls %}RECENT CUSTOM URLS{% endblock %}</h1>
+    <div id="custom_urls">
+        {% for url in custom_urls %}
+        <div class="transparent-box">
+            <div align="center" style="color: papayawhip;">
+                <a href="/dashboard{{url.user.email}}"></a>
+                <p><h5>Original URL: <a class="my-link" href="{{url.original_url}}" target="_blank">{{url.original_url}}</a></h5></p>
+                <p><h5>Custom Shortened URL: <a class="my-link" href="http://{{ server_name }}/{{url.custom_short_url}}" target="_blank">https://{{ server_name }}/{{url.custom_short_url}}</a></h5></p>
+                <div>
+                    <button align="center" type="button" class="btn-qr" onclick="toggleQR('{{ url.custom_short_url }}')">QR Code</button>
+                    <a href="{{ url_for('views.update', url_key=url.custom_short_url) }}"><button type="button" class="btn-edit">Edit</button></a>
+                    <a href="{{ url_for('views.delete', url_key=url.custom_short_url) }}"><button type="button" class="btn-delete">Delete</button></a>
+                </div>
+                <div id="qr_{{ url.custom_short_url }}" style="display: none;">
+                    <br><p><img src="" alt="QR Code"></p>
+                </div>
+                    <p><h6>Created: {{url.date_created.strftime('%B %d, %Y')}} || Click Count: {{url.click_count}}</h6></p>
+            </div>
+        </div>
+        {% endfor %}
     </div>
-    {% endblock %}
+    <script>
+        function toggleQR(urlKey) {
+            var qrDiv = document.getElementById("qr_" + urlKey);
+            var qrImg = qrDiv.querySelector("img");
+
+            if (qrDiv.style.display === "none") {
+                // QR code is hidden, show it
+                qrImg.src = "/generate_qr/" + urlKey;
+                qrDiv.style.display = "block";
+            } else {
+                // QR code is visible, hide it
+                qrDiv.style.display = "none";
+            }
+        }
+    </script>
+    {% block footer %}
+    {% if current_user.is_authenticated %}
+    <br>
+    <div align="center">
+      <a href="/shortenurl">
+        <button type="button" class="btn-outline-custom">
+          SHORTEN URL
+        </button></a>
+    </div>
+    <br>
+    <div align="center">
+      <a href="/customurl"
+        ><button type="button" class="btn-outline-custom">
+          CUSTOM URL
+        </button></a>
+    </div>
+    <br>
+    {% endif %}
+    {% endblock %} 
+{% endblock %}
