--- a/scissor/templates/edit.html
+++ b/scissor/templates/edit.html
@@ -28,6 +28,6 @@
     </form>
     <br />
 <div align="center">
-    <a href="/home"><button type="button" class="btn-outline">CANCEL</button></a>
+    <a href="/dashboard"><button type="button" class="btn-outline">CANCEL</button></a>
 </div>
 {% endblock content %}
