--- a/scissor/templates/shortenurl.html
+++ b/scissor/templates/shortenurl.html
@@ -17,6 +17,6 @@
     </form>
 <br />
 <div align="center">
-    <a href="/home"><button type="button" class="btn-outline">BACK</button></a>
+    <a href="/dashboard"><button type="button" class="btn-outline">BACK</button></a>
 </div>
 {% endblock %}
